Removed form, used simple HTML. Added CSRF, and remember me. Small styling change.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -20,6 +20,7 @@ parameters:
 framework:
     #esi:             ~
     #translator:      { fallbacks: ["%locale%"] }
+    csrf_protection: ~
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
